Fix crash introduced in reports after porting forms to Qt4

(that was commit 1c53aa8b9e09681)

Put the page navigator is put aside of the report area's horizontal
scroll bar like we do in table and form views.

REVIEW:118046
BUG:334293